--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6",
     "react-toastify": "^9.0.8",
     "xlsx": "^0.18.5",
     "xrpl-client": "^1.9.5"
