--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6",
     "react-toastify": "^9.0.8",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-polyfill-node": "^0.10.2",
     "xlsx": "^0.18.5",
     "xrpl-client": "^1.9.5"
   },
